--- a/LEAF_DISEASE_DETECTION_USING_CNN.ipynb
+++ b/LEAF_DISEASE_DETECTION_USING_CNN.ipynb
@@ -845,7 +845,7 @@
             "Epoch 3/15\n",
             "\u001b[1m516/516\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m670s\u001b[0m 1s/step - accuracy: 0.6203 - loss: 1.1400 - val_accuracy: 0.6679 - val_loss: 0.9741\n",
             "Epoch 4/15\n",
-            "\u001b[1m280/516\u001b[0m \u001b[32m━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━\u001b[0m \u001b[1m4:44\u001b[0m 1s/step - accuracy: 0.6528 - loss: 0.9974"
+            "\u001b[1m396/516\u001b[0m \u001b[32m━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━\u001b[0m \u001b[1m2:25\u001b[0m 1s/step - accuracy: 0.6551 - loss: 0.9956"
           ]
         }
       ],
